// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`2. article summary component with multiple paragraphs 1`] = `
<View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph 1.
    </Text>
    <Text>
       
      Test paragraph 2
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`3. article summary component with content including line breaks 1`] = `
<View>
  <Text>
    <Text>
      
      <Text>
        Review 1
      </Text>
      <Text>
        

      </Text>
       ITV
      <Text>
        

      </Text>
      ★★★★☆
    </Text>
    <Text>
       
      <Text>
        Review 2
      </Text>
      <Text>
        

      </Text>
       BBC Two
      <Text>
        

      </Text>
      ★★★☆☆
    </Text>
    <Text>
       
      Test paragraph
      ...
    </Text>
  </Text>
</View>
`;

exports[`4. article summary component containing links 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      <Text>
        Sajid Javid
      </Text>
       has warned the Home Office to expect an overhaul after the 
      <Text>
        Windrush scandal
      </Text>
       as he ditches the policy of creating a “hostile
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
</View>
`;

exports[`5. article summary component with headline and no content 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <DatePublication
    date="2017-07-01T14:32:00.000Z"
    publication="SUNDAYTIMES"
  />
</View>
`;

exports[`6. article summary component with empty content at the end trimmed 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph 1.
    </Text>
    <Text>
       
      Test paragraph 2
    </Text>
    <Text>
       
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-07-01T14:32:00.000Z"
    publication="SUNDAYTIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`7. article summary component with no byline 1`] = `
<View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
</View>
`;

exports[`8. article summary component with no label 1`] = `
<View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`9. article summary component with no headline 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-07-01T14:32:00.000Z"
    publication="SUNDAYTIMES"
  />
</View>
`;

exports[`10. article summary component with no date publication 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`11. article summary component with a video label 1`] = `
<View>
  <View>
    <View>
      <VideoLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`12. article summary component with a strapline 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Test label"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text
    accessibilityRole="header"
    aria-level="4"
  >
    Test Strapline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`13. article summary content component without an ast to render null 1`] = `null`;

exports[`15. article summary component with no headline and no label title 1`] = `
<View>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-07-01T14:32:00.000Z"
    publication="SUNDAYTIMES"
  />
</View>
`;

exports[`16. article summary content component with white space height 1`] = `
<Text
  numberOfLines={5}
>
  <Text>
    
    Test paragraph
    ...
  </Text>
</Text>
`;

exports[`17. article summary content component without white space height 1`] = `
<Text
  numberOfLines={2}
>
  <Text>
    
    Test paragraph
    ...
  </Text>
</Text>
`;

exports[`18. article summary component with a single paragraph and flag on tablet 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Camilla Long"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`19. article summary component with a strapline and flag on tablet 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Camilla Long"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text
    accessibilityRole="header"
    aria-level="4"
  >
    Test Strapline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`20. article summary component with hidden label 1`] = `
<View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Test Headline
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`21. article summary component with byline on top 1`] = `
<View>
  <View>
    <View>
      <ArticleLabel
        childTestID="article-slug"
        color="#333333"
        title="Camilla Long"
      />
    </View>
  </View>
  <Text
    accessibilityRole="header"
    aria-level="3"
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <Text>
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <DatePublication
    date="2017-11-17T00:01:00.000Z"
    publication="TIMES"
  />
  <View>
    <ArticleByline
      articleReadState={
        Object {
          "animate": false,
          "read": false,
        }
      }
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </View>
</View>
`;
